src/objects/CQ_Quote_Team__c.object
<CustomObject>
    <fields>
        <fullName>CQ_CQ_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contracted Quote</description>
        <label>CQ Name</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quote Team</relationshipLabel>
        <relationshipName>Quote_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Quote_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Add Users to Quote Team</description>
        <label>Quote Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Customers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CQ Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;CQ_CQ_Name__r.Id, CQ_CQ_Name__r.Apttus_Proposal__Proposal_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>member_email__c</fullName>
        <formula>CQ_Quote_Team_Member__r.Email</formula>
        <label>member email</label>
        <type>Text</type>
    </fields>
    <label>Quote Team</label>
    <nameField>
        <displayFormat>QTM-{0000000}</displayFormat>
        <label>Quote Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>